<resources>
    <string name="app_name">TrackerApp</string>
    <string name="item_name_text">Item Name</string>
    <string name="item_price_text">Item Price</string>
    <string name="item_output_text">Product Name: %s\nProduct price: %f</string>
    <string name="item_count_text">1</string>
    <string name="add_item">Add Item</string>
    <string name="open_excel">Open Excel</string>
    <string name="products">Products</string>
    <string name="item_count">ItemCount</string>
    <string name="product_date_label">Date</string>
    <string name="product_name_label">Name</string>
    <string name="product_price_label">Price</string>
    <string name="product_quantity_label">Amount</string>

    <!-- Fragments titles -->
    <string name="products_fragment_title">Money Manager</string>

</resources>