<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsFragment">

    <Button
        android:id="@+id/product_add_button"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="@+id/open_excel_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/open_excel_button"
        app:layout_constraintTop_toBottomOf="@+id/open_excel_button" />

    <Button
        android:id="@+id/open_excel_button"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:text="@string/open_excel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/product_name"
        app:layout_constraintTop_toTopOf="@+id/product_name" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="@dimen/_134sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:autofillHints="@string/item_name_text"
        android:hint="@string/item_name_text"
        android:inputType="text"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/product_price"
        android:layout_width="@dimen/_134sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints="@string/item_price_text"
        android:hint="@string/item_price_text"
        android:inputType="numberDecimal"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="@+id/product_name"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <TextView
        android:id="@+id/product_quantity_label"
        android:layout_width="@dimen/_96sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/item_count"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="@+id/product_price"
        app:layout_constraintTop_toBottomOf="@+id/product_price" />

    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:autofillHints="@string/item_count_text"
        android:hint="@string/item_count_text"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/product_quantity_label"
        app:layout_constraintTop_toTopOf="@+id/product_quantity_label" />

    <LinearLayout
        android:id="@+id/recycler_view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_quantity_label"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/product_date_header_label"
            style="@style/Widget.Inventory.Header"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/product_date_label"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/product_name_header_label"
            style="@style/Widget.Inventory.Header"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/product_name_label"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/product_price_header_label"
            style="@style/Widget.Inventory.Header"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/product_price_label"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/product_quantity_header_label"
            style="@style/Widget.Inventory.Header"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/product_quantity_label"
            android:textAlignment="center" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="@dimen/margin_between_elements"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/product_entity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_header" />

</androidx.constraintlayout.widget.ConstraintLayout>